--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^5.2.8",
+    "@angular/cdk": "^5.2.4",
     "@angular/cli": "^1.6.0",
     "@angular/common": "^5.1.0",
     "@angular/compiler": "^5.1.0",
@@ -33,6 +35,7 @@
     "@angular/forms": "^5.1.0",
     "@angular/http": "^5.1.0",
     "@angular/language-service": "^5.1.0",
+    "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
@@ -55,6 +58,7 @@
     "core-js": "^2.4.1",
     "express": "^4.15.2",
     "express-jwt": "^5.1.0",
+    "hammerjs": "^2.0.8",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^5.0.9",
     "ngrx-store-freeze": "^0.2.0",
