--- a/package.json
+++ b/package.json
@@ -52,17 +52,23 @@
     "@types/node": "~6.0.60",
     "@types/uuid": "^2.0.29",
     "auth0-js": "^9.4.1",
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.17.2",
     "compression": "^1.6.2",
-    "cookie-parser": "~1.3.5",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.5",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
     "express-jwt": "^5.1.0",
+    "express-session": "^1.15.6",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^5.0.9",
+    "morgan": "^1.9.0",
     "ngrx-store-freeze": "^0.2.0",
     "normalize.css": "^5.0.0",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.1",
     "path": "^0.12.7",
     "rxjs": "^5.4.2",
     "ts-helpers": "^1.1.2",
