--- a/package.json
+++ b/package.json
@@ -25,66 +25,67 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.8",
-    "@angular/cdk": "^5.2.4",
-    "@angular/cli": "^1.6.0",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/language-service": "^5.1.0",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/router": "^5.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
-    "@ngrx/effects": "^4.1.1",
-    "@ngrx/store": "^4.1.1",
-    "@ngrx/store-devtools": "^4.1.1",
-    "@types/body-parser": "^1.16.3",
+    "@angular/animations": "^6.1.3",
+    "@angular/cdk": "^5.2.5",
+    "@angular/cli": "^1.7.4",
+    "@angular/common": "^6.1.3",
+    "@angular/compiler": "^6.1.3",
+    "@angular/compiler-cli": "^6.1.3",
+    "@angular/core": "^6.1.3",
+    "@angular/forms": "^6.1.3",
+    "@angular/http": "^6.1.3",
+    "@angular/language-service": "^6.1.3",
+    "@angular/material": "^5.2.5",
+    "@angular/platform-browser": "^6.1.3",
+    "@angular/platform-browser-dynamic": "^6.1.3",
+    "@angular/router": "^6.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^3.0.0",
+    "@ngrx/effects": "^6.1.0",
+    "@ngrx/store": "^6.1.0",
+    "@ngrx/store-devtools": "^6.1.0",
+    "@ngx-gallery/core": "^3.1.0",
+    "@types/body-parser": "^1.17.0",
     "@types/compression": "^0.0.33",
-    "@types/cors": "^2.8.1",
-    "@types/express": "^4.0.35",
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
     "@types/jasmine": "2.5.38",
-    "@types/jsonwebtoken": "^7.2.0",
-    "@types/node": "~6.0.60",
+    "@types/jsonwebtoken": "^7.2.8",
+    "@types/node": "^6.0.116",
     "@types/uuid": "^2.0.29",
-    "auth0-js": "^9.4.1",
+    "auth0-js": "^9.7.3",
     "body-parser": "~1.17.1",
-    "compression": "^1.6.2",
+    "compression": "^1.7.3",
     "cookie-parser": "~1.3.5",
-    "core-js": "^2.4.1",
-    "express": "^4.15.2",
+    "core-js": "^2.5.7",
+    "express": "^4.16.3",
     "express-jwt": "^5.1.0",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^7.3.0",
-    "mongoose": "^5.0.9",
-    "ngrx-store-freeze": "^0.2.0",
+    "mongoose": "^5.2.9",
+    "ngrx-store-freeze": "^0.2.4",
     "normalize.css": "^5.0.0",
     "path": "^0.12.7",
-    "rxjs": "^5.4.2",
+    "rxjs": "^6.2.2",
     "ts-helpers": "^1.1.2",
     "ts-node": "~3.3.0",
-    "tslint": "^5.8.0",
-    "typescript": "~2.4.0",
-    "uuid": "^3.0.1",
-    "zone.js": "^0.8.14"
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1",
+    "uuid": "^3.3.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "codelyzer": "~4.0.1",
-    "concurrently": "^3.5.0",
+    "codelyzer": "^4.0.2",
+    "concurrently": "^3.6.1",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.5.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-remap-istanbul": "^0.2.1",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.18.3",
     "protractor": "~5.1.0",
     "webdriver-manager": "10.2.5"
   }
